# Oh-Myself

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: goal-memory-flow.html  index.html
docs/architecture/: 系统提示词架构.html
src/ohmyself/: __init__.py  __main__.py  cli.py  oh_myself.md  runtime.py  terminal_ui.py
src/ohmyself/api/: __init__.py  anthropic_client.py  client.py  errors.py  openai_client.py  usage.py
src/ohmyself/auth/: __init__.py  manager.py  storage.py
src/ohmyself/config/: __init__.py  paths.py  settings.py
src/ohmyself/engine/: __init__.py  cost_tracker.py  messages.py  query.py  query_engine.py  stream_events.py
src/ohmyself/permissions/: __init__.py  checker.py  modes.py
src/ohmyself/prompts/: __init__.py  environment.py  system_prompt.py
src/ohmyself/services/: __init__.py  coping.py  experience.py  goal.py  goal_agent.py  goal_memory.py  goal_memory_retriever.py  goal_progress.py  goal_session.py  long_plan.py  plan.py  scheduler.py  session_storage.py  status.py  strategy.py  tool_outputs.py  transcript_memory.py  user_profile.py  workflow.py
src/ohmyself/tests/: test_file_tools.py  test_runtime_session.py  test_session_storage.py  test_shell.py  test_system_prompt.py  test_transcript_memory.py  test_user_profile.py
src/ohmyself/tools/: __init__.py  base.py  bash_tool.py  file_edit_tool.py  file_read_tool.py  file_write_tool.py  (+8 more)
tests/: test_cli.py  test_experience.py  test_goal.py  test_long_plan.py  test_openai_client.py  test_plan.py  test_query_permissions.py  test_subagent_tool.py  test_terminal_ui.py
(+2 files in other folders)
